--- a/Source/Ecstasy/Ecstasy.csproj
+++ b/Source/Ecstasy/Ecstasy.csproj
@@ -38,19 +38,24 @@
     <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Components\EcsMovementBoundComponent.cs" />
+    <Compile Include="AutoMoveSystem.cs" />
+    <Compile Include="Components\EcsGamePadInputComponent.cs" />
     <Compile Include="Components\EcsSpriteComponent.cs" />
     <Compile Include="Components\EcsTransformComponent.cs" />
-    <Compile Include="Components\EcsVelocityComponent.cs" />
+    <Compile Include="Components\EcsSpeedComponent.cs" />
     <Compile Include="Core\EcsComponent.cs" />
     <Compile Include="Core\EcsEntity.cs" />
+    <Compile Include="Core\EcsPrefabLibrary.cs" />
     <Compile Include="Core\EcsSystem.cs" />
     <Compile Include="Core\EcsWorld.cs" />
-    <Compile Include="Systems\EcsSimpleMoveSystem.cs" />
+    <Compile Include="MoveDirectionComponent.cs" />
+    <Compile Include="PlayerControllerSystem.cs" />
+    <Compile Include="ShootComponent.cs" />
+    <Compile Include="ShootSystem.cs" />
+    <Compile Include="Systems\EcsInputSystem.cs" />
     <Compile Include="TestGame.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Systems\EcsSpriteLoadSystem.cs" />
     <Compile Include="Systems\EcsSpriteRenderSystem.cs" />
   </ItemGroup>
   <ItemGroup>
